CHANGELOG
=========

DarkElements version 6.0 - february 2018
- several small adjustments
- updated files style and custom-editor-style

DarkElements version 5.9 - february 2018
- several small adjustments
- updated file style and functions

DarkElements version 5.8 - february 2018
- please ignore my notification in previous version regarding removal from repository
- decided not to remove it yet
- added a static font-size in body tag
- now other font-sizes will scale better
- updated h1-h6 headings
- updated files style and custom-editor-style
- several small adjustments

DarkElements version 5.7 - november 2017
- last update: this theme will be removed from repository
- you can keep using theme, but without updates and without support from author
- added new options in customizer for blog page and posts
- file style: relocated border-bottom from css class .more to css class .post-list

DarkElements version 5.6 - september 2017
- fixed display issue with mobile menu
- added div container around mobile menu
- updated files header and style

DarkElements version 5.5 - july 2017
- file style and custom-editor-style: added clear and margin-bottom to headings

DarkElements version 5.4 - june 2017
- new jquery navigation for mobile screens
- replaced select menu with toggle menu 
- files nav, header and style: added and removed code regarding new navigation
- files style and custom-editor-style: changed margin of several html tags to avoid margin collapsing
- if you're using a child theme that contains file header: copy-paste code regarding new navigation

DarkElements version 5.3 - april 2017
- file single: added post class .post-single
- file style: changed margin and padding of several elements (layout improvement)

DarkElements version 5.2 - march 2017
- file style: changed margin of several elements to avoid margin collapsing
- cleaned up file style
- updated files content-list and custom-editor-style
- file functions: improved font family registering
